# quicksort

./: CMakeLists.txt  CMakePresets.json  Readme.md
quicksort/: CMakeLists.txt  quicksort.cpp  quicksort.h
